cmake_minimum_required(VERSION 3.27)
project(Fractorizations)

set(CMAKE_CXX_STANDARD 17)

add_executable(Fractorizations main.cpp
#        "Fermat Factorizations/FF.cpp"

        #        "Shore Algorithm/main/main.cpp"
#        "Shore Algorithm/main/main.h"
#        "Shore Algorithm/main/shore.cpp"
#        "GCD/Expanded Euclidian Algorithm.cpp"
#        "SOE/main/FSOE.cpp"
#        "SOE/main/SOE.cpp"
#        "GCD/Euclidian Algorithm.cpp"
)
